[package]
name = "gol-nvg"
version = "0.1.0"
authors = ["Brad Barrows <bebrws@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvg-gl = { path="../nvg/nvg-gl", version="0.5.4" } 
nvg = { path="../nvg", version="0.5.13" }
# nvg = "0.5.11"
chrono = "0.4.19"
anyhow = "1.0.26"
glutin = "0.24.1"
gl = "0.14.0"

winit = "0.20.0"
takeable-option = "0.4"
rand = "0.7.3"